# ros2_ws_max

./: .gitignore  hacer_grafica.py  odom_tray.csv  real_tray.csv  turtle.txt
src/lab1/: CMakeLists.txt  package.xml
src/lab1/config/: poses.txt
src/lab1/launch/: accion_y_persepcion.xml  avanzar_y_rotar.xml  correr_nodos.xml  dead_reckoning.xml  obstacle_detector.xml
src/lab1/scripts/: data_recorder.py  dead_reckoning_nav.py  obstacle_detector.py  pose_loader.py  teleop_nav.py
